--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-info@supercups.co
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>SUPERCUPS</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        *{
+        	padding: 0px;
+        	margin: 0px;
+        }
+        html{
+        	font: 400 15px/20px 'Helvetica Neue', Sans-Serif;
+        }
+        strong{
+        	font-weight: 600;
+        }
+        p{
+        	margin: 40px;
+        }
+        </style>
+    </head>
+    <body>
+			<p>
+				<strong>SUPERCUPS</strong><br />
+				<a href="mailto:info@supercups.co">info@supercups.co</a>
+			</p>
+			<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-46714709-2', 'auto');
+		  ga('send', 'pageview');
+			</script>
+    </body>
+</html>
