--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
         }
         p{
         	margin: 40px;
+            text-align: center;
+        }
+        .logo{
+            margin-bottom: 20px;
+        }
+        a{
+            color: #000;
+        }
+        a:hover{
+            text-decoration: none;
         }
         </style>
     </head>
     <body>
 			<p>
-				<strong>SUPERCUPS</strong><br />
+				<img src="./logo.svg" class="logo" /><br />
 				<a href="mailto:info@supercups.co">info@supercups.co</a>
 			</p>
 			<script>
